--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Hòa Nhân COC</title>
 </head>
 <body>
-    <script>alert('Tất cả Acc trên Shop đang được Sale 10%')</script>
+    <!-- <script>alert('Tất cả Acc trên Shop đang được Sale 10%')</script> -->
     <div id="menu">
         <ul>
             <li><a href="./index.html">Trang chủ</a></li>
@@ -70,7 +70,7 @@
                             <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">800.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">550.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
                             <div class="product-price">Mã #56 - Đã SPC ID - Hall 12</div>
                         </div>
                     </div>
@@ -95,7 +95,7 @@
                             <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">800.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">550.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
                             <div class="product-price">Mã #63 - Đã SPC ID - Hall 12</div>
                         </div>
                     </div>
@@ -120,7 +120,7 @@
                             <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">300.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">200.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
                             <div class="product-price">Mã #69 - Đã SPC ID - Hall 10</div>
                         </div>
                     </div>
@@ -145,7 +145,7 @@
                             <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">550.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">350.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
                             <div class="product-price">Mã #75 - Đã SPC ID - Hall 12</div>
                         </div>
                     </div>
@@ -170,7 +170,7 @@
                             <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">350.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">250.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
                             <div class="product-price">Mã #78 - Đã SPC ID - Hall 11</div>
                         </div>
                     </div>
@@ -195,7 +195,7 @@
                             <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">350.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">250.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
                             <div class="product-price">Mã #79 - Đã SPC ID - Hall 11</div>
                         </div>
                     </div>
@@ -220,7 +220,7 @@
                             <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">450.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">350.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
                             <div class="product-price">Mã #80 - Đã SPC ID - Hall 11</div>
                         </div>
                     </div>
@@ -245,7 +245,7 @@
                             <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">550.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">350.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
                             <div class="product-price">Mã #81 - Đã SPC ID - Hall 10</div>
                         </div>
                     </div>
@@ -270,7 +270,7 @@
                             <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">650.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">480.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
                             <div class="product-price">Mã #82 - Đã SPC ID - Hall 12</div>
                         </div>
                     </div>
@@ -295,7 +295,7 @@
                             <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">550.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">350.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
                             <div class="product-price">Mã #84 - ĐÃ SPC ID - Hall 12</div>
                         </div>
                     </div>
@@ -320,7 +320,7 @@
                             <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">470.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">350.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
                             <div class="product-price">Mã #87 - ĐÃ SPC ID - Hall 11</div>
                         </div>
                     </div>
@@ -345,7 +345,7 @@
                             <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">1.550.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">1.100.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
                             <div class="product-price">Mã #89 - ĐÃ SPC ID - Hall 14</div>
                         </div>
                     </div>
@@ -370,7 +370,7 @@
                             <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">1.550.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">750.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
                             <div class="product-price">Mã #91 - ĐÃ SPC ID - Hall 15</div>
                         </div>
                     </div>
@@ -395,7 +395,7 @@
                             <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">1.250.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">650.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
                             <div class="product-price">Mã #92 - ĐÃ SPC ID - Hall 13</div>
                         </div>
                     </div>
@@ -420,7 +420,7 @@
                             <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">750.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">700.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
                             <div class="product-price">Mã #93 - ĐÃ SPC ID - Hall 13</div>
                         </div>
                     </div>
@@ -445,7 +445,7 @@
                             <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">1.850.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">1.250.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
                             <div class="product-price">Mã #94 - ĐÃ SPC ID - Hall 15</div>
                         </div>
                     </div>
@@ -470,7 +470,7 @@
                             <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">250.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">150.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
                             <div class="product-price">Mã #96 - ĐÃ SPC ID - Hall 9</div>
                         </div>
                     </div>
@@ -495,7 +495,7 @@
                             <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">800.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">600.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
                             <div class="product-price">Mã #98 - ĐÃ SPC ID - Hall 13</div>
                         </div>
                     </div>
@@ -520,7 +520,7 @@
                             <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">700.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">500.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
                             <div class="product-price">Mã #99 - ĐÃ SPC ID - Hall 13</div>
                         </div>
                     </div>
@@ -545,7 +545,7 @@
                             <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">3.500.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">2.700.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
                             <div class="product-price">Mã #102 - ĐÃ SPC ID - Hall 15</div>
                         </div>
                     </div>
@@ -570,7 +570,7 @@
                             <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">800.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">600.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
                             <div class="product-price">Mã #104 - ĐÃ SPC ID - Hall 13</div>
                         </div>
                     </div>
