--- a/index.html
+++ b/index.html
@@ -518,6 +518,40 @@
                         </div>
                     </div>
                 </li> 
+                <!-- Mã #109 -->
+                <li>
+                    <div class="product-item">
+                        <div class="product-top">
+                            <div class="slide-wrapper">
+                                <!-- <div id="test-63"><img src="../images/sale15.png" alt=""></div> -->
+                                <div class="slide"><img src="./images/ma109.jpg"></div>
+                                <div class="slide"><img src="./images/ma1091.jpg"></div>
+                            </div>
+                            <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">550.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <div class="product-price">Mã #109 - ĐÃ SPC ID - Hall 12</div>
+                        </div>
+                    </div>
+                </li> 
+                <!-- Mã #110 -->
+                <li>
+                    <div class="product-item">
+                        <div class="product-top">
+                            <div class="slide-wrapper">
+                                <!-- <div id="test-63"><img src="../images/sale15.png" alt=""></div> -->
+                                <div class="slide"><img src="./images/ma110.jpg"></div>
+                                <div class="slide"><img src="./images/ma1101.jpg"></div>
+                            </div>
+                            <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">2.500.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <div class="product-price">Mã #110 - ĐÃ SPC ID - Hall 14</div>
+                        </div>
+                    </div>
+                </li> 
 
             </ul>
         </div>
