--- a/index.html
+++ b/index.html
@@ -14,8 +14,23 @@
     <title>Hòa Nhân COC</title>
 </head>
 <body>
-    <!-- <script>alert('Tất cả Acc trên Shop đang được Sale 10%')</script> -->
-    <div id="menu">
+    <nav>
+        <input id="nav-toggle" type="checkbox">
+        <div class="logo"><strong>Hòa Nhân</strong></div>
+        <ul class="links">
+            <li><a href="./index.html">Trang chủ</a></li>
+            <li><a href="https://www.facebook.com/hoanhan0206">Admin</a></li>
+            <li><a href="./index.html">Hall COC</a></li>
+            <li><a href="./huongdan.html">Hướng Dẫn</a></li>
+            <li><a href="https://www.facebook.com/groups/238845453344953/?ref=sharehttps%3A%2F%2Fwww.facebook.com%2Fgroups%2F238845453344953%2F%3Fref%3Dshare&exp=8ce3">Group Admin</a></li>
+        </ul>
+        <label for="nav-toggle" class="icon-burger">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+        </label>
+    </nav>
+    <!-- <div id="menu">
         <ul>
             <li><a href="./index.html">Trang chủ</a></li>
             <li><a href="https://www.facebook.com/hoanhan0206">Admin</a></li>
@@ -23,8 +38,8 @@
             <li><a href="./huongdan.html">Hướng Dẫn</a></li>
             <li><a href="https://www.facebook.com/groups/238845453344953/?ref=sharehttps%3A%2F%2Fwww.facebook.com%2Fgroups%2F238845453344953%2F%3Fref%3Dshare&exp=8ce3">Group Admin</a></li>
         </ul>
-    </div>  
-    
+    </div>   -->
+    <br><br><br><br>
     <div class="hn-1">
         <table border="0">
             <tr class="hn-1-1">
