--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <nav>
         <input id="nav-toggle" type="checkbox">
-        <div class="logo"><strong>Hòa Nhân</strong></div>
+        <div class="logo"><strong>Hòa Nhân <br> ZALO: 0949073146</strong></div>
         <ul class="links">
             <li><a href="./index.html">Trang chủ</a></li>
             <li><a href="https://www.facebook.com/hoanhan0206">Admin</a></li>
@@ -57,7 +57,7 @@
             </tr>
         </table>
     </div>
-    
+
     <div class="main">
         <div class="main_1">
             <p class="main_p">ACC COC Nổi Bật</p>
