--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                             <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">600.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">650.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
                             <div class="product-price">Mã #89 - ĐÃ SPC ID - Hall 14</div>
                         </div>
                     </div>
@@ -270,6 +270,22 @@
                         <div class="product-info">
                             <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">400.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
                             <div class="product-price">Mã #109 - ĐÃ SPC ID - Hall 12</div>
+                        </div>
+                    </div>
+                </li> 
+                <!-- Mã #112 -->
+                <li>
+                    <div class="product-item">
+                        <div class="product-top">
+                            <div class="slide-wrapper">
+                                <div class="slide"><img src="./images/ma112.jpg"></div>
+                                <div class="slide"><img src="./images/ma1121.jpg"></div>
+                            </div>
+                            <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">800.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <div class="product-price">Mã #112 - ĐÃ SPC ID - Hall 14</div>
                         </div>
                     </div>
                 </li> 
