--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                             <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">300.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">350.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
                             <div class="product-price">Mã #84 - ĐÃ SPC ID - Hall 12</div>
                         </div>
                     </div>
@@ -188,7 +188,7 @@
                             <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">350.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">400.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
                             <div class="product-price">Mã #92 - ĐÃ SPC ID - Hall 13</div>
                         </div>
                     </div>
@@ -204,7 +204,7 @@
                             <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">350.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">400.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
                             <div class="product-price">Mã #93 - ĐÃ SPC ID - Hall 13</div>
                         </div>
                     </div>
@@ -236,7 +236,7 @@
                             <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">350.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">400.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
                             <div class="product-price">Mã #99 - ĐÃ SPC ID - Hall 13</div>
                         </div>
                     </div>
@@ -252,7 +252,7 @@
                             <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">200.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">350.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
                             <div class="product-price">Mã #107 - ĐÃ SPC ID - Hall 11</div>
                         </div>
                     </div>
@@ -268,7 +268,7 @@
                             <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">400.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">450.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
                             <div class="product-price">Mã #109 - ĐÃ SPC ID - Hall 12</div>
                         </div>
                     </div>
@@ -284,8 +284,40 @@
                             <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">800.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
-                            <div class="product-price">Mã #112 - ĐÃ SPC ID - Hall 14</div>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">650.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <div class="product-price">Mã #112 - ĐÃ SPC ID - Hall 13</div>
+                        </div>
+                    </div>
+                </li> 
+                <!-- Mã #113 -->
+                <li>
+                    <div class="product-item">
+                        <div class="product-top">
+                            <div class="slide-wrapper">
+                                <div class="slide"><img src="./images/ma113.jpg"></div>
+                                <div class="slide"><img src="./images/1131.jpg"></div>
+                            </div>
+                            <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">650.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <div class="product-price">Mã #113 - ĐÃ SPC ID - Hall 14</div>
+                        </div>
+                    </div>
+                </li> 
+                <!-- Mã #114 -->
+                <li>
+                    <div class="product-item">
+                        <div class="product-top">
+                            <div class="slide-wrapper">
+                                <div class="slide"><img src="./images/ma114.jpg"></div>
+                                <div class="slide"><img src="./images/ma1141.jpg"></div>
+                            </div>
+                            <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">650.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <div class="product-price">Mã #114 - ĐÃ SPC ID - Hall 14</div>
                         </div>
                     </div>
                 </li> 
