--- a/index.html
+++ b/index.html
@@ -273,6 +273,22 @@
                         </div>
                     </div>
                 </li> 
+                <!-- Mã #122 -->
+                <li>
+                    <div class="product-item">
+                        <div class="product-top">
+                            <div class="slide-wrapper">
+                                <div class="slide"><img src="./images/ma122.jpg"></div>
+                                <div class="slide"><img src="./images/ma1221.jpg"></div>
+                            </div>
+                            <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">1.350.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <div class="product-price">Mã #122 - ĐÃ SPC ID - Hall 15</div>
+                        </div>
+                    </div>
+                </li> 
 
             </ul>
         </div>
