--- a/index.html
+++ b/index.html
@@ -145,19 +145,67 @@
                         </div>
                     </div>
                 </li> 
-                <!-- Mã #115 -->
+                <!-- Mã #123 -->
                 <li>
                     <div class="product-item">
                         <div class="product-top">
                             <div class="slide-wrapper">
-                                <div class="slide"><img src="./images/ma115.jpg"></div>
-                                <div class="slide"><img src="./images/ma1151.jpg"></div>
+                                <div class="slide"><img src="./images/ma123.jpg"></div>
+                                <div class="slide"><img src="./images/ma1231.jpg"></div>
                             </div>
                             <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
                         </div>
                         <div class="product-info">
-                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">450.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
-                            <div class="product-price">Mã #115 - ĐÃ SPC ID - Hall 12</div>
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">350.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <div class="product-price">Mã #123 - ĐÃ SPC ID - Hall 13</div>
+                        </div>
+                    </div>
+                </li> 
+                <!-- Mã #124 -->
+                <li>
+                    <div class="product-item">
+                        <div class="product-top">
+                            <div class="slide-wrapper">
+                                <div class="slide"><img src="./images/ma124.jpg"></div>
+                                <div class="slide"><img src="./images/ma1241.jpg"></div>
+                            </div>
+                            <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">1.900.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <div class="product-price">Mã #124 - ĐÃ SPC ID - Hall 14</div>
+                        </div>
+                    </div>
+                </li> 
+                <!-- Mã #125 -->
+                <li>
+                    <div class="product-item">
+                        <div class="product-top">
+                            <div class="slide-wrapper">
+                                <div class="slide"><img src="./images/ma125.jpg"></div>
+                                <div class="slide"><img src="./images/ma1251.jpg"></div>
+                            </div>
+                            <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">1.900.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <div class="product-price">Mã #125 - ĐÃ SPC ID - Hall 14</div>
+                        </div>
+                    </div>
+                </li> 
+                <!-- Mã #126 -->
+                <li>
+                    <div class="product-item">
+                        <div class="product-top">
+                            <div class="slide-wrapper">
+                                <div class="slide"><img src="./images/ma126.jpg"></div>
+                                <div class="slide"><img src="./images/ma1261.jpg"></div>
+                            </div>
+                            <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">1.200.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <div class="product-price">Mã #126 - ĐÃ SPC ID - Hall 14</div>
                         </div>
                     </div>
                 </li> 
