--- a/index.html
+++ b/index.html
@@ -208,7 +208,23 @@
                             <div class="product-price">Mã #126 - ĐÃ SPC ID - Hall 14</div>
                         </div>
                     </div>
-                </li> 
+                </li>
+                <!-- Mã #127 -->
+                <li>
+                    <div class="product-item">
+                        <div class="product-top">
+                            <div class="slide-wrapper">
+                                <div class="slide"><img src="./images/ma127.jpg"></div>
+                                <div class="slide"><img src="./images/ma1271.jpg"></div>
+                            </div>
+                            <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">3.500.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <div class="product-price">Mã #127 - ĐÃ SPC ID - Hall 14</div>
+                        </div>
+                    </div>
+                </li>  
 
             </ul>
         </div>
