--- a/index.html
+++ b/index.html
@@ -193,6 +193,54 @@
                         </div>
                     </div>
                 </li>  
+                <!-- Mã #128 -->
+                <li>
+                    <div class="product-item">
+                        <div class="product-top">
+                            <div class="slide-wrapper">
+                                <div class="slide"><img src="./images/ma128.jpg"></div>
+                                <div class="slide"><img src="./images/ma1281.jpg"></div>
+                            </div>
+                            <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">1.700.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <div class="product-price">Mã #128 - ĐÃ SPC ID - Hall 15</div>
+                        </div>
+                    </div>
+                </li> 
+                <!-- Mã #129 -->
+                <li>
+                    <div class="product-item">
+                        <div class="product-top">
+                            <div class="slide-wrapper">
+                                <div class="slide"><img src="./images/ma129.jpg"></div>
+                                <div class="slide"><img src="./images/ma1291.jpg"></div>
+                            </div>
+                            <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">450.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <div class="product-price">Mã #129 - ĐÃ SPC ID - Hall 14</div>
+                        </div>
+                    </div>
+                </li> 
+                <!-- Mã #130 -->
+                <li>
+                    <div class="product-item">
+                        <div class="product-top">
+                            <div class="slide-wrapper">
+                                <div class="slide"><img src="./images/ma130.jpg"></div>
+                                <div class="slide"><img src="./images/ma1301.jpg"></div>
+                            </div>
+                            <a href="https://zalo.me/0949073146" class="buy-now">mua ngay</a>
+                        </div>
+                        <div class="product-info">
+                            <a href="" class="product-cat"><i class="fa-solid fa-heart rung"></i> <b style="background-color: #fff;">850.000đ</b> <i class="fa-solid fa-heart rung"></i></a>
+                            <div class="product-price">Mã #130 - ĐÃ SPC ID - Hall 14</div>
+                        </div>
+                    </div>
+                </li>    
 
             </ul>
         </div>
